# neverland

./: .dockerignore  .env.airgap.example  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  README.md  agents.md  alembic.ini  docker-compose.airgap.yml  docker-compose.logging.yml  docker-compose.yml  opencode.json  pyproject.toml  skill.md  spec,md  spec.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_mission.md  mission.yml  phase-task.md  spec-gap.md
.github/instructions/: backend.instructions.md  frontend.instructions.md  release-airgap.instructions.md
.github/workflows/: auto-claude-review.yml  backend.yml  ci.yml  claude.yml  codex-dev.yml  codex-review.yml  containers.yml  docs.yml  frontend.yml  release-artifact.yml  release.yml  security.yml
.swarm/: memory.db  memory.db-shm  memory.db-wal  schema.sql
docker/: backend.Dockerfile  frontend-nginx.conf  frontend.Dockerfile  install-translation-packs.py  libretranslate.Dockerfile
docker/prometheus/: alerts.yml  prometheus.yml
docs/: README.md  logical-spec.md
docs/agents/: README.md  context-budget-migration.md  copilot.md  issue-context-template.md  opencode.md  token-efficiency.md
docs/architecture/: sqlmodel-bounded-models.md
docs/context/: README.md  backend-api.md  extraction.md  frontend.md  search.md
docs/design/: document-comments-spec.md  logging-system-spec.md  logo-options.md  metrics-monitoring-spec.md  user-ui-spec.md  (+2 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
migrations/: env.py
review/: 11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  20.md  22.md  23.md  30.md  README.md
scripts/: backup-airgap-data.sh  build-ollama-model-bundle.sh  build-release-artifact.sh  check-pr-cleanliness.sh  check-qdrant-compat.py  install-hooks.sh  load-airgap-images.sh  load-ollama-model-bundle.sh  pre-commit  preflight-upgrade-check.sh  production-audit.sh  restore-airgap-data.sh  setup-env.sh  smoke-test.sh  tomorrowland-airgap.sh  upgrade-airgap.sh  validate-airgap-artifact.sh  validate-translation-languages.sh
tests/: conftest.py  test_config.py  test_events.py  test_health.py  test_logging.py  test_migrations.py
(+423 files in other folders)
