[project]
name = "tomorrowland"
version = "0.1.0"
description = "Local semantic search engine foundation"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "bcrypt>=4.1",
  "elasticsearch>=8.14,<9",
  "extract-msg>=0.55",
  "fastapi>=0.111",
  "openpyxl>=3.1",
  "psycopg[binary]>=3.2",
  "prometheus-client>=0.20",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "pypdf>=4.0",
  "PyJWT>=2.8",
  "python-docx>=1.1",
  "python-pptx>=1.0",
  "qdrant-client>=1.10,<1.12",
  "smbprotocol>=1.16,<2",
  "sqlalchemy>=2.0",
  "striprtf>=0.0.32",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "types-openpyxl>=3.1",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-branch --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["TC001", "TC002", "TC003"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
files = ["src", "tests"]
